Fixed an issue with the timestamp for when the messages are sent/recieved issue: if the text message has few characters, the timestamp underneath it is broken into two lines fix: 'white-space: nowrap;'

--- a/public/css/room.css
+++ b/public/css/room.css
@@ -166,6 +166,7 @@ img {
     left: 0;
     position: absolute;
     bottom: -15px;
+    white-space: nowrap;
     color: rgba(255,255,255,0.5);
     font-size: 10px;
 }
@@ -174,6 +175,7 @@ img {
     right: 0;
     position: absolute;
     bottom: -15px;
+    white-space: nowrap;
     color: rgba(255,255,255,0.5);
     font-size: 10px;
 }
